<resources>
    <string name="app_name">Pokepedia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokepedia">Pokepedia</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>

    <!-- region IntroScreen.kt -->
    <string name="intro_screen_title_1">Welcome</string>
    <string name="intro_screen_description_1">Welcome to Pokepedia, your ultimate Pokemon reference guide with a complete Pokedex</string>
    <string name="intro_screen_title_2">Filter</string>
    <string name="intro_screen_description_2">Filter by type, generation, or ability to easily find the Pokemon you need and become a master of the Pokemon world</string>
    <string name="intro_screen_title_3">Create a team</string>
    <string name="intro_screen_description_3">Create custom teams and add favorite Pokemon for easy access with Pokepedia</string>
    <!-- endregion -->

    <!-- region LoginFragment -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_password">Invalid Password!</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forgot_password">Forgot password</string>
    <string name="verify_email">Please verify your email before you login!</string>
    <string name="user_is_null">User is null</string>
    <string name="failed_google_sign">Google sign in failed</string>
    <string name="incorrect_provider">Your provider is not email/password</string>
    <string name="failed_password_reset">Password reset failed</string>
    <string name="password_reset_successful">Password reset link sent successfully</string>
    <string name="sign_in_successful">%1$s, sign in was successful!</string>
    <string name="enter_email_for_password_reset">Enter your email address to get a password reset link.</string>
    <string name="trouble_logging_in">Having trouble logging in?</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <!-- endregion -->

    <!-- region RegisterFragment -->
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="successful_registration">Your registration was successful, please verify your email.</string>
    <string name="failed_registration">Your registration failed</string>
    <string name="enter_first_name">Please enter a first name</string>
    <string name="enter_last_name">Please enter a last name</string>
    <string name="enter_email">Please enter an email</string>
    <string name="enter_password">Please enter a password</string>
    <string name="passwords_mismatch">Passwords do not match!</string>
    <string name="weak_password">Passwords must contain at least 8 characters, including at least 1 capital letter, 1 number and 1 special sign</string>
    <!-- endregion -->

    <!-- region Facebook -->
    <string name="facebook_app_id">786544306138666</string>
    <string name="fb_login_protocol_scheme">fb786544306138666</string>
    <string name="facebook_client_token">2e15e5fe4d6d85e44c4b191af682a077</string>
    <!-- endregion -->

    <!-- region MyTeamFragment -->
    <string name="my_team">My Team</string>
    <string name="remove_from_my_team_title">Remove from My Team</string>
    <string name="remove_from_my_team_message">Do you want to remove this pokemon from your team?</string>
    <string name="pokemon_id">#%d</string>
    <string name="pokemon_name">%s</string>
    <!-- endregion -->

    <!-- region HomeFragment -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="fetch_unsuccessful">Fetch unsuccessful</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="no_such_pokemon">There is no such Pokemon</string>
    <string name="empty_pokemon_list">No Pokemon to be shown</string>
    <!-- endregion -->

    <!-- region SettingsFragment -->
    <string name="settings">Settings</string>
    <string name="buddy_pokemon">Buddy pokemon</string>
    <string name="start_date">Start date: %s</string>
    <string name="change_password">Change password</string>
    <string name="edit_image">Edit image.</string>
    <string name="date_joined">Date joined</string>
    <string name="logout">Logout</string>
    <string name="logout_successful">Logout was successful</string>
    <string name="remove_photo_title">Remove photo</string>
    <string name="remove_photo_message">Are you sure you want to remove the photo?</string>
    <string name="update_photo_successful">Photo updated successfully</string>
    <!-- endregion -->

    <!-- region PokemonDetailsFragment -->
    <string name="abilities">Abilities:</string>
    <string name="base_stats">Base stats:</string>
    <string name="pokemon_id_name">#%1d %2$s</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="add_a_nickname_to_your_buddy">Add a nickname to your buddy:</string>
    <string name="save">Save</string>
    <string name="nickname_hint">ex: Mikey</string>
    <string name="enter_nickname_error">Please enter a nickname.</string>
    <string name="choose_as_favorite">Choose as favorite!</string>
    <string name="pokemon_image">Pokemon image.</string>
    <string name="pikachu">Pikachu</string>
    <string name="pika">Pika</string>
    <string name="delete">Delete</string>
    <string name="add_to_my_team_title">Add to My Team</string>
    <string name="add_to_my_team_message">Do you want to add this pokemon to your team?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="team_full_title">Your team is full</string>
    <string name="team_full_message">Do you want to remove another pokemon?</string>
    <string name="added_to_team_successfully">%s was added to your team!</string>
    <string name="already_exists_in_team">%s is already in your team!</string>
    <string name="pokemon_details_empty">There are no details for this pokemon</string>
    <string name="pick_an_action">Pick an action:</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove_photo">Remove photo</string>
    <string name="app_logo">App logo</string>
    <!-- endregion -->

</resources>