<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="@dimen/width_image_fragment_login"
        android:layout_height="@dimen/height_image_fragment_login"
        android:layout_marginTop="@dimen/margin_padding_xlarge"
        android:contentDescription="@string/pokepedia"
        android:src="@drawable/branding_image_pokepedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_medium"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:hint="@string/email"
        app:boxStrokeColor="@color/yellow_pokemon"
        app:boxStrokeErrorColor="@color/red_error"
        app:endIconMode="clear_text"
        app:endIconTint="@color/blue_pokemon"
        app:errorContentDescription="@string/invalid_email"
        app:errorTextColor="@color/red_error"
        app:hintTextColor="@color/blue_pokemon"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_login">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_medium"
        android:layout_marginTop="@dimen/margin_padding_medium"
        android:hint="@string/password"
        app:boxStrokeColor="@color/yellow_pokemon"
        app:boxStrokeErrorColor="@color/red_error"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/blue_pokemon"
        app:errorContentDescription="@string/invalid_password"
        app:errorTextColor="@color/red_error"
        app:hintTextColor="@color/blue_pokemon"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/blue_pokemon"
        android:text="@string/remember_me"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintStart_toStartOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/forgot_password"
        app:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/rememberMeCheckBox"
        app:layout_constraintEnd_toEndOf="@id/textPassword"
        app:layout_constraintTop_toBottomOf="@id/textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_medium"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:backgroundTint="@color/facebook"
        android:gravity="start|center_vertical"
        android:text="@string/sign_in_with_facebook"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:background="?attr/selectableItemBackground"
        app:cornerRadius="@dimen/radius_large"
        app:icon="@drawable/ic_facebook"
        app:iconPadding="@dimen/margin_padding_normal"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_medium"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:backgroundTint="@color/white"
        android:gravity="start|center_vertical"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:background="?attr/selectableItemBackground"
        app:cornerRadius="@dimen/radius_large"
        app:icon="@drawable/ic_google"
        app:iconPadding="@dimen/margin_padding_normal"
        app:iconSize="@dimen/size_large"
        app:iconTintMode="multiply"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonFacebook" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_medium"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:backgroundTint="@color/blue_pokemon"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/yellow_pokemon"
        android:textFontWeight="900"
        android:textSize="@dimen/text_size_normal"
        app:background="?attr/selectableItemBackground"
        app:cornerRadius="@dimen/radius_large"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGoogle" />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_xxtiny"
        android:text="@string/dont_have_an_account"
        app:layout_constraintBottom_toBottomOf="@id/buttonRegister"
        app:layout_constraintEnd_toStartOf="@id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

    <TextView
        android:id="@+id/buttonRegister"
        style="@style/TextView.Normal.Clickable.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_normal"
        android:text="@string/sign_up"
        android:textColor="@color/blue_pokemon"
        app:layout_constraintBottom_toBottomOf="@id/textRegister"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>
