<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.login.RegisterFragment">

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="@dimen/width_image_fragment_login"
            android:layout_height="@dimen/height_image_fragment_login"
            android:layout_marginTop="@dimen/margin_padding_xlarge"
            android:contentDescription="@string/pokepedia"
            android:src="@drawable/branding_image_pokepedia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_medium"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:hint="@string/first_name"
            app:boxStrokeColor="@color/yellow_pokemon"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_pokemon"
            app:hintTextColor="@color/blue_pokemon"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_medium"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:hint="@string/last_name"
            app:boxStrokeColor="@color/yellow_pokemon"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_pokemon"
            app:hintTextColor="@color/blue_pokemon"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_medium"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:hint="@string/email"
            app:boxStrokeColor="@color/yellow_pokemon"
            app:boxStrokeErrorColor="@color/red_error"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_pokemon"
            app:errorContentDescription="@string/invalid_email"
            app:errorTextColor="@color/red_error"
            app:hintTextColor="@color/blue_pokemon"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_medium"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:hint="@string/password"
            app:boxStrokeColor="@color/yellow_pokemon"
            app:boxStrokeErrorColor="@color/red_error"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue_pokemon"
            app:errorContentDescription="@string/invalid_password"
            app:errorTextColor="@color/red_error"
            app:hintTextColor="@color/blue_pokemon"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textRepeatPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_medium"
            android:layout_marginTop="@dimen/margin_padding_medium"
            android:hint="@string/confirm_password"
            app:boxStrokeColor="@color/yellow_pokemon"
            app:boxStrokeErrorColor="@color/red_error"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue_pokemon"
            app:errorContentDescription="@string/invalid_password"
            app:errorTextColor="@color/red_error"
            app:hintTextColor="@color/blue_pokemon"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_medium"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:backgroundTint="@color/blue_pokemon"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/yellow_pokemon"
            android:textFontWeight="900"
            android:textSize="@dimen/text_size_normal"
            app:background="?attr/selectableItemBackground"
            app:cornerRadius="@dimen/radius_large"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textRepeatPassword" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_xxtiny"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="@id/buttonGoToLogin"
            app:layout_constraintEnd_toStartOf="@id/buttonGoToLogin"
            app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

        <TextView
            android:id="@+id/buttonGoToLogin"
            style="@style/TextView.Normal.Clickable.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_normal"
            android:text="@string/login"
            android:textColor="@color/blue_pokemon"
            app:layout_constraintBottom_toBottomOf="@id/textLogin"
            app:layout_constraintEnd_toEndOf="@id/buttonRegister"
            app:layout_constraintTop_toBottomOf="@id/buttonRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>