<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cream_variant"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_padding_xxsmall">

        <ImageView
            android:id="@+id/imgPikachuConfused"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:src="@drawable/ic_pikachu_confused"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textTroubleLoggingIn"
            style="@style/MaterialTextView.Xmedium.Center.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_large"
            android:layout_marginTop="@dimen/margin_padding_small"
            android:text="@string/trouble_logging_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPikachuConfused" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textEnterEmail"
            style="@style/MaterialTextView.Normal.Grey.Center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_large"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:text="@string/enter_email_for_password_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTroubleLoggingIn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            style="@style/TextInputLayout.OutlinedBox.Custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_padding_large"
            android:layout_marginTop="@dimen/margin_padding_normal"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEnterEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSend"
            style="@style/MaterialButton.SmallText.Radius.Clickable.NoCaps.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_xxsmall"
            android:text="@string/send"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/textEmail"
            app:layout_constraintTop_toBottomOf="@id/textEmail" />

        <TextView
            android:id="@+id/buttonCancel"
            style="@style/TextView.Normal.Grey.Clickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_padding_normal"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/buttonSend"
            app:layout_constraintEnd_toStartOf="@id/buttonSend"
            app:layout_constraintTop_toTopOf="@id/buttonSend" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>